--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,26 @@
     <module>webapp</module>
   </modules>
 
-  <distributionManagement>
+  <!--distributionManagement>
     <site>
       <id>site-server</id>
       <name>Test Project Site</name>
       <url>file:///tmp/maven-project-site</url>
     </site>
-  </distributionManagement>
-
+  </distributionManagement -->
+ <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://localhost:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Internal Snapshot Releases</name>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+         
   <build>
     <plugins>
       <plugin>
