--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
       <url>file:///tmp/maven-project-site</url>
     </site>
   </distributionManagement -->
- <distributionManagement>
+ <!--distributionManagement>
         <repository>
             <id>deployment</id>
             <name>Internal Releases</name>
@@ -44,7 +44,7 @@
             <name>Internal Snapshot Releases</name>
             <url>http://localhost:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
-    </distributionManagement>
+    </distributionManagement-->
          
   <build>
     <plugins>
