--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <name>Internal Snapshot Releases</name>
             <url>http://localhost:8081/repository/maven_snapshot_pipeline/</url>
         </snapshotRepository>
-    </distributionManagement-->
+    </distributionManagement>
          
   <build>
     <plugins>
