--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
   <groupId>com.example.maven-project</groupId>
   <artifactId>java-test-app</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0</version>
+  <packaging>war</packaging>
+  <version>1.0.0</version>
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
@@ -51,8 +51,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
 
@@ -110,7 +110,7 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.3</version>
         </plugin>
 
         <plugin>
